# Native8080

./: .gitignore  CMakeLists.txt  README.md
samples/: hello.com  make_hello.py
src/: cpu8080.cpp  cpu8080.h  main.cpp
